barracuda/nested/badstore.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "string",
            "defaultValue": "West US",
            "allowedValues": [
                "Brazil South",
                "East Asia",
                "East US",
                "Japan East",
                "Japan West",
                "North Central US",
                "North Europe",
                "South Central US",
                "West Europe",
                "West US",
                "Southeast Asia",
                "Central US",
                "East US 2"
            ],
            "metadata": {
                "description": "Deployments Location"
            }
        },
         "virtualMachineName": {
            "type": "string",
            "defaultValue": "badstore-vm"
        },
        "virtualMachineSize": {
            "type": "string",
            "defaultValue": "Standard_A1",
            "allowedValues": [
                "Standard_A1",
                "Standard_A2",
                "Standard_D1",
                "Standard_D1_V2"
            ]
        },
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Admin Username of Virtual Machine to SSH"
            }
        },
        "adminPassword": {
            "type": "securestring"
        },
        "storageAccountName": {
            "type": "string",
            "defaultValue": "badstore"
        },
        "imageStorageContainerName":{
            "type": "string",
            "defaultValue": "badstore-os"
        },
        "storageAccountType": {
            "type": "string",
            "defaultValue": "Standard_LRS"
        },
        "virtualNetworkName": {
            "type": "string",
            "defaultValue": "badstore-vnet"
        },
        "subnetName": {
            "type": "string",
            "defaultValue": "badstore-subnet"
        },
        "networkInterfaceName": {
            "type": "string",
            "defaultValue": "badstore-nic"
        },
        "networkSecurityGroupName": {
            "type": "string",
            "defaultValue": "badstore-nsg"
        },
        "publicIpAddressName": {
            "type": "string",
            "defaultValue": "badstore-pip"
        },
        "publicIPdnsPrefix": {
            "type": "string",
            "defaultValue": "badstoredns"
        }
    },
    "variables": {
        "storageAccName": "[concat(parameters('storageAccountName'),uniqueString(resourceGroup().id))]",
        "storageContainer":"[concat(parameters('imageStorageContainerName'),uniqueString(resourceGroup().id))]",
        "vnetAddressRange":"10.0.0.0/16",
        "subnetAddressRange":"10.0.1.0/24",
        "subnetRef": "[concat(resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName')),'/subnets/',parameters('subnetName'))]",
        "publicIPdns": "[concat(parameters('publicIPdnsPrefix'),uniqueString(resourceGroup().id))]"
    },
    "resources": [
        {
            "name": "[parameters('virtualMachineName')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('networkInterfaceName'))]",
                "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccName'))]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('virtualMachineName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('virtualMachineSize')]"
                },
                "storageProfile": {

                    "osDisk": {
                        "osType": "Linux",
                        "name": "[parameters('virtualMachineName')]",
                        "createOption": "FromImage",
                        "image": {
                            "uri": "https://badstoresa12.blob.core.windows.net/vhds/osImage/4zrjwwaq.icx201506091310050783.vhd"
                        },
                        "vhd": {
                            "uri": "[concat('https://badstoresa12.blob.core.windows.net/',variables('storageContainer'),'/osDisk.',uniqueString(resourceGroup().id),'.vhd')]"
                        },
                        "caching": "ReadWrite"
                    }
                    
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaceName'))]"
                        }
                    ]
                }
            }
        },
        {
            "name": "[variables('storageAccName')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "properties": {
                "accountType": "[parameters('storageAccountType')]"
            }
        },
        {
            "name": "[parameters('virtualNetworkName')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnetAddressRange')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('subnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('subnetAddressRange')]"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('networkInterfaceName')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]",
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('publicIpAddressName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName'))]"
            ],
            "properties": {
                "primary": true,
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('publicIpAddressName'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroupName'))]"
                }
            }
        },
        {
            "name": "[parameters('publicIpAddressName')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic",
                "dnsSettings": {
                    "domainNameLabel": "[variables('publicIPdns')]"
                }
            }
        },
        {
            "name": "[parameters('networkSecurityGroupName')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "https",
                        "properties": {
                            "priority": 1010,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                   
                    {
                        "name": "ssh",
                        "properties": {
                            "priority": 1020,
                            "sourceAddressPrefix": "*",
                            "protocol": "Tcp",
                            "destinationPortRange": "22",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        }
    ]
}
